force-app/main/default/objects/Booking__c/fields/BaseFare__c.field-meta.xml
<CustomField>
    <fullName>BaseFare__c</fullName>
    <formula>IF( AND(PeakHoursFare__c != 0 , NonPeakHoursFare__c == 0), Distance__c *  PeakHoursFare__c ,  Distance__c * NonPeakHoursFare__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>