force-app/main/default/objects/Booking__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>