force-app/main/default/objects/Booking__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <inlineHelpText>Distance in Kms</inlineHelpText>
    <label>Distance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>