force-app/main/default/objects/Booking__c/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <formula>Driver__r.FirstName__c</formula>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>