force-app/main/default/objects/Booking__c/fields/Drop_Point__c.field-meta.xml
<CustomField>
    <fullName>Drop_Point__c</fullName>
    <label>Drop Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>