force-app/main/default/objects/Booking__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>( BaseFare__c * 2.5)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GST = 2.5% of Base Fare</inlineHelpText>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>