force-app/main/default/objects/Booking__c/fields/NonPeakHoursFare__c.field-meta.xml
<CustomField>
    <fullName>NonPeakHoursFare__c</fullName>
    <inlineHelpText>Non Peak Hrs fare per Km: From 10 AM to 5 PM and From 10 PM to 4 AM</inlineHelpText>
    <label>Non Peak Hours  Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>