force-app/main/default/objects/Booking__c/fields/ParkingFee__c.field-meta.xml
<CustomField>
    <fullName>ParkingFee__c</fullName>
    <label>Parking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>