force-app/main/default/objects/Booking__c/fields/PeakHoursFare__c.field-meta.xml
<CustomField>
    <fullName>PeakHoursFare__c</fullName>
    <inlineHelpText>Peak Hrs fare per Km: From 4 AM to 10 AM and From 5 PM to 10 PM</inlineHelpText>
    <label>Peak Hours Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>