force-app/main/default/objects/Booking__c/fields/PickupPoint__c.field-meta.xml
<CustomField>
    <fullName>PickupPoint__c</fullName>
    <label>Pickup Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>