force-app/main/default/objects/Booking__c/fields/TollFee__c.field-meta.xml
<CustomField>
    <fullName>TollFee__c</fullName>
    <label>Toll Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>