force-app/main/default/objects/Booking__c/fields/TotalTripFare__c.field-meta.xml
<CustomField>
    <fullName>TotalTripFare__c</fullName>
    <formula>BaseFare__c + GST__c + ParkingFee__c + TollFee__c + WaitTimeCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Trip Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>