force-app/main/default/objects/Booking__c/fields/WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WaitTime__c</fullName>
    <inlineHelpText>Wait Time in Minutes during trip</inlineHelpText>
    <label>Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>