force-app/main/default/objects/Booking__c/fields/WaitTimeCharge__c.field-meta.xml
<CustomField>
    <fullName>WaitTimeCharge__c</fullName>
    <formula>WaitTime__c  * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wait Time Charge per Min is 2/-</inlineHelpText>
    <label>Wait Time Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>