force-app/main/default/objects/Booking__c/fields/WF_Calculated_Fare__c.field-meta.xml
<CustomField>
    <fullName>WF_Calculated_Fare__c</fullName>
    <label>WF Calculated Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>