force-app/main/default/objects/Booking__c/validationRules/CancellationReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CancellationReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
 ISCHANGED(Cancellation_Reason__c), 
 ISCHANGED(Booking_Status__c))
 ,
 ISPICKVAL(Booking_Status__c,&quot;Canceled&quot;) ,
 ISBLANK( Cancellation_Reason__c )

 )</errorConditionFormula>
    <errorMessage>Please enter Cancellation Reason before cancelling the booking.</errorMessage>
</ValidationRule>