force-app/main/default/objects/Booking__c/validationRules/PreventCreationInCancelStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCreationInCancelStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Booking_Status__c,&quot;Canceled&quot;),ISNEW())</errorConditionFormula>
    <errorMessage>Bookings cannot be created in Cancel status.</errorMessage>
</ValidationRule>