force-app/main/default/objects/Booking__c/validationRules/StopFourthBooking.validationRule-meta.xml
<ValidationRule>
    <fullName>StopFourthBooking</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW(),
  Customer__r.Total_Bookings__c &gt; 1)</errorConditionFormula>
    <errorMessage>Please select a different customer, as the selected customer is already having 3 bookings.</errorMessage>
</ValidationRule>